[gd_scene load_steps=7 format=2]

[ext_resource path="res://Nodes/Map/ZIndexer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Enemies/MegaSwarm/ExplosiveSwarm/explosion.png" type="Texture2D" id=2]
[ext_resource path="res://Nodes/Enemies/MegaSwarm/ExplosiveSwarm/ExplosiveBouble.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=36]
radius = 20.0

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 80 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=34]
resource_name = "splat"
length = 60.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10, 10.5, 11, 11.5, 12, 12.5, 13, 13.5, 14, 14.5, 15, 15.5, 16, 16.5, 17, 17.5, 18, 18.5, 19, 19.5, 20, 20.5, 21, 21.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 32, 36 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 22 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 48.0, 1.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 3, 34, 36 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "do_explosive_dmg"
}, {
"args": [  ],
"method": "disable_bouble"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="ExplosiveBouble" type="Area2D"]
z_index = -50
z_as_relative = false
collision_mask = 3074
script = ExtResource( 5 )

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
hframes = 11
vframes = 10
frame = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 36 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "splat"
anims/RESET = SubResource( 33 )
anims/splat = SubResource( 34 )

[node name="ZIndexer" parent="." instance=ExtResource( 1 )]
z_index = -50

[connection signal="area_entered" from="." to="." method="_on_boubles_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_boubles_area_exited"]
